# wistmail

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  LICENSE  README.md  design.lib.pen  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.hermes/plans/: 2026-05-10_114916-v3-admin-billing-mfa-emails.md
apps/ai-worker/: Dockerfile  package.json
apps/ai-worker/src/: config.ts  (+8 more)
apps/api/: Dockerfile  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/docs/: Dockerfile  mdx-components.tsx  package.json  source.config.ts  tailwind.config.ts
apps/mobile/: README.md  firebase.json  pubspec.yaml
apps/web/: DESIGN_AUDIT.md  Dockerfile  PHASE_AUDIT.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/: DEEP-LINKS.md  ROADMAP-CALLS.md  ROADMAP-FORGOT-PASSWORD.md  ROADMAP-RICH-NOTIFICATIONS.md
docs/perf/: api-response-times-2026-05-10.md  bundle-audit-2026-05-10.md  image-audit-2026-05-10.md  lighthouse-2026-05-10.md  n-plus-one-2026-05-10.md
docs/plans/: 2026-05-10-phase-c-billing-schema.md  2026-05-10-phase-d-billing-api.md  2026-05-10-phase-e-through-j.md
docs/runbooks/: local-dev.md
domain-connect/: mail.wistfare.com.mail-setup.json
scripts/: Dockerfile.cron  billing-tick-cron.ts  docker-smoke.sh
sdks/python/: pyproject.toml
sdks/python/tests/: test_client.py
sdks/python/wistmail/: __init__.py  client.py  errors.py
(+619 files in other folders)
