[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wistmail"
version = "0.1.0"
description = "Official Python SDK for the WistMail email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]
keywords = ["email", "wistmail", "smtp", "transactional", "api", "sdk"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]
